--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ margin: 0;
 padding: 0;
 }
 
+* {
+margin: 0;
+padding: 0;
+}
+
 p,
 h1,
 h2,
@@ -101,6 +106,7 @@ text-decoration: none;
 list-style: none;
 padding: 24px 0;
 display: block;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-studio::after {
@@ -124,6 +130,7 @@ color: var(--color-hover);
 text-decoration: none;
 padding: 24px 0;
 display: block;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-nav:hover{
@@ -151,12 +158,11 @@ text-decoration: none;
 color: var(--color-secondary);
 padding-top: 24px;
 display: block;
-transition-property: ;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .box-address:hover {
-transition-property: var(--color-hover);
-
+color: var(--color-hover);
 }
 
 /*  2 частина з кнопкою   */
@@ -169,6 +175,8 @@ background-size: cover;
 padding-top: 188px;
 padding-bottom: 188px;
 text-align: center;
+margin: 0 auto;
+max-width: 1440px;
 }
 
 .hero-title {
@@ -195,7 +203,7 @@ background: var(--color-button);
 cursor: pointer;
 border: none;
 font-family: inherit;
-
+transition: background-color 250ms;
 }
 
 .button:hover {
@@ -397,6 +405,7 @@ width: 100%;
 height: 100%;
 background-color: var(--color-button);
 border-radius: 50%;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  
 .link-soc:hover {
@@ -432,17 +441,20 @@ flex-basis: calc((100% - 120px) / 6);
 }
 
 .link-cust {
+display: flex;
 align-items: center;
 justify-content: center;
-display: flex;
 width: 100%;
 height: 100%;
 border: 1px solid #8E8F99;
 border-radius: 4px;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+ border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-cust:hover {
 border-color: var(--color-hover);
+border: 1px solid var(--color-hover);
 }
 
 .imag-cust {
@@ -539,6 +551,7 @@ width: 100%;
 height: 100%;
 background-color: rgba(255, 255, 255, 0.1);
 border-radius: 50%;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-media:hover {
@@ -620,6 +633,9 @@ box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12),
 0 3px 1px 0 rgba(0, 0, 0, 0.1);
 border: 1px solid var(--color-page);
 border-color: var(--color-hover);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-port{
@@ -630,6 +646,10 @@ cursor: pointer;
 border: 1px solid var(--color-page);
 font-family: inherit;
 border-radius: 4px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-port:hover {
@@ -715,7 +735,7 @@ left: 0;
 width: 100%;
 height: 100%;
 transform: translateY(100%);
-transition: transform 250ms;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .program:hover .master-description {
@@ -725,10 +745,6 @@ transform: translateY(0);
 .master-images {
 position: relative;
 overflow: hidden;
-}
-
-.text {
-
 }
 
 /* modal  */
@@ -758,14 +774,18 @@ pointer-events: none;
 }
 
 .modal {
-position: relative;
+padding: 72px 24px 24px 24px;
+position: absolute;
 overflow: auto;
-width: 100%;
-height: 100%;
-max-width: 408px;
-max-height: 573px;
-background-color: #FCFCFC;
-transition: transform 500ms;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+min-width: 408px;
+min-height: 584px;
+background: #fcfcfc;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
 }
 
 .backdrop.is-hidden .modal {
@@ -790,13 +810,17 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover {
+.modal-close:hover,
+.modal-close:focus {
 background-color: var(--color-hover);
+color: var(--color-inverted);
 }
 
 .modal-close:hover .icon-close {
 fill: var(--color-inverted);
 }
+
+
 /* contact */
 
 .box-contact{
@@ -806,7 +830,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 text-align: center;
-padding-top: 24px;
+margin-top: 0;
 }
 
 .form {
@@ -817,7 +841,9 @@ padding: 16px 24px 24px 24px;
 }
 
 .form-field{
-flex-basis: 100%;
+margin-bottom: 8px;
+display: flex;
+flex-direction: column;
 }
 
 .form-label {
@@ -830,14 +856,75 @@ display: block;
 color: #8E8F99;
 }
 
-.form-input {
+
+
+.form-modal {
+display: block;
+}
+
+.input-form {
+position: relative;
 width: 100%;
-border: 1px solid var(--color-primary);
-border-radius: 4px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
 }
 
-.form-input:focus {
+.input-form:focus {
 border: 1px solid #4D5AE5;
-border-radius: 4px;
+    border-radius: 4px;
 }
 
+.icon-form {
+fill: var(--color-general);
+position: absolute;
+top: 50%;
+left: 16px;
+transform: translateY(-50%);
+cursor: pointer;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-form:focus {
+fill: var(--color-button);
+}
+
+.form-field.coment {
+margin-bottom: 16px;
+}
+
+
+.privacy-policy {
+font: inherit;
+font-size: 12px;
+color: #757575;
+margin-bottom: 24px;
+}
+
+.privacy-policy label {
+display: flex;
+gap: 8px;
+}
+
+
+.icon-check {
+width: 16px;
+height: 16px;
+border: 1.25px solid #2e2f42;
+border-radius: 2px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-form.send {
+min-width: 169px;
+padding: 16px 32px;
+margin: 0 auto;
+background-color: var(--color-button);
+color: var(--color-page);
+}
+
+.btn-form:hover,
+.btn-form:focus {
+background-color: var(--color-hover);
+color: var(--color-page);
+}
