--- a/css/styles.css
+++ b/css/styles.css
@@ -177,6 +177,8 @@ padding-bottom: 188px;
 text-align: center;
 margin: 0 auto;
 max-width: 1440px;
+margin: 0 auto;
+max-width: 1440px;
 }
 
 .hero-title {
@@ -448,8 +450,7 @@ width: 100%;
 height: 100%;
 border: 1px solid #8E8F99;
 border-radius: 4px;
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
- border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-cust:hover {
@@ -461,6 +462,7 @@ border: 1px solid var(--color-hover);
 width: 104px;
 height: 56px;
 fill: #AFB1B8;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -519,6 +521,7 @@ font-size: 16px;
 line-height: 1.5;
 color: var(--color-inverted);
 margin-top: 0px;
+margin-bottom: 16px;
 }
 
 
@@ -557,6 +560,77 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .link-media:hover {
 background-color: var(--color-social);
 }
+
+/* Subscribe */
+
+
+.subtitle-footer {
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+color: #FFFFFF;
+margin-bottom: 16px;
+}
+
+.content-email {
+width: 264px;
+height: 40px;
+padding: 8px 0 8px 16px;
+margin-left: 0;
+border-radius: 4px;
+border: 1px solid #FFFFFF;
+background-color: transparent;
+color: var(--color-inverted);
+}
+
+.content-email:focus {
+outline: none;
+border: 1px solid var(--color-button);
+}
+
+.soc-box {
+display: flex;
+align-items: flex-start;
+gap: 80px;
+}
+
+.button-subs-box {
+margin-top: 36px;
+}
+
+.button-subs {
+width: 165px;
+height: 40px;
+font-size: 16px;
+line-height: 1.5;
+border-radius: 4px;
+font-weight: 500;
+color: var(--color-inverted);
+background: var(--color-button);
+cursor: pointer;
+border: none;
+font-family: inherit;
+transition: background-color 250ms;
+}
+
+.bt-sub {
+text-align:center;
+gap: 16px;
+}
+
+.telegram {
+
+}
+
+.subscribe {
+display: flex;
+align-items: flex-start;
+gap: 24px;
+}
+
+
 
 /*  Portfolio початок   */
 .site-nav-portfolio {
@@ -670,6 +744,7 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 color: var(--color-secondary);
+margin-bottom: 0;
 }
 
 .box-content-port{
@@ -747,6 +822,10 @@ position: relative;
 overflow: hidden;
 }
 
+.text {
+margin-bottom: 0;
+}
+
 /* modal  */
 
 .icon-close {
@@ -776,7 +855,6 @@ pointer-events: none;
 .modal {
 padding: 72px 24px 24px 24px;
 position: absolute;
-overflow: auto;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
@@ -821,110 +899,122 @@ fill: var(--color-inverted);
 }
 
 
-/* contact */
+/* Інформація */
 
-.box-contact{
+.form {
+width: 360px;
+height: 336px;
+margin: 0 auto;
+}
+
+.your-contact {
+margin-bottom: 16px;
+}
+
+.box-contact {
+text-align: center;
+}
+
+
+.content {
+width: 360px;
+height: 40px;
+padding: 11px 0 11px 38px;
+margin-left: 0;
+border-radius: 4px;
+border: 1px solid #2e2f42;
+}
+
+.content:focus {
+outline: none;
+border: 1px solid var(--color-button);
+border-radius: 4px;
+}
+
+
+.content:focus + .icon-form {
+fill: var(--color-button);
+}
+
+
+.button-coment {
+display: flex;
+justify-content: center;
+}
+
+.btn-form {
+width: 169px;
+height: 56px;
+border: none;
+border-radius: 4px;
 font-family: 'Roboto',sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
-text-align: center;
-margin-top: 0;
-}
-
-.form {
-display: flex;
-flex-wrap: wrap;
-gap: 0 8px;
-padding: 16px 24px 24px 24px;
-}
-
-.form-field{
-margin-bottom: 8px;
-display: flex;
-flex-direction: column;
-}
-
-.form-label {
-font-family: 'Roboto',sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-display: block;
-color: #8E8F99;
-}
-
-
-
-.form-modal {
-display: block;
-}
-
-.input-form {
-position: relative;
-width: 100%;
-    border: 1px solid var(--color-primary);
-    border-radius: 4px;
-}
-
-.input-form:focus {
-border: 1px solid #4D5AE5;
-    border-radius: 4px;
-}
-
-.icon-form {
-fill: var(--color-general);
-position: absolute;
-top: 50%;
-left: 16px;
-transform: translateY(-50%);
 cursor: pointer;
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-form:focus {
-fill: var(--color-button);
-}
-
-.form-field.coment {
-margin-bottom: 16px;
-}
-
-
-.privacy-policy {
-font: inherit;
-font-size: 12px;
-color: #757575;
-margin-bottom: 24px;
-}
-
-.privacy-policy label {
-display: flex;
-gap: 8px;
-}
-
-
-.icon-check {
-width: 16px;
-height: 16px;
-border: 1.25px solid #2e2f42;
-border-radius: 2px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-form.send {
-min-width: 169px;
-padding: 16px 32px;
-margin: 0 auto;
+color: #FFFFFF;
 background-color: var(--color-button);
-color: var(--color-page);
 }
 
 .btn-form:hover,
 .btn-form:focus {
 background-color: var(--color-hover);
-color: var(--color-page);
 }
+
+
+.form-label {
+font-size: 12px;
+line-height: 1.16;
+display: block;
+color: #8E8F99;
+}
+
+.form-input {
+width: 100%;
+height: 120px;
+resize: none;
+padding: 8px 0 0 16px;
+margin-bottom: 16px;
+border: 1px solid #2E2F42;
+border-radius: 4px;
+}
+
+
+.privacy-policy {
+display: flex;
+gap: 8px;
+margin-bottom: 24px;
+}
+
+.visually-hidden {
+
+}
+
+.type-polic{
+width: 100%;
+height: 16px;
+color: #8E8F99;
+font-weight: 400;
+font-size: 12px;
+line-height: 1.6;
+
+}
+
+.input-form{
+position: relative;
+margin-bottom: 8px;
+}
+
+.icon-form {
+width: 13px;
+height: 13px;
+position: absolute;
+fill: #2E2F42;
+display: block;
+top: 50%;
+left: 19px;
+transform: translate(0, -50%);
+}
+
+
