--- a/css/styles.css
+++ b/css/styles.css
@@ -877,7 +877,8 @@ justify-content: center;
 width: 100%;
 height: 100%;
 background-color: rgba(46, 47, 66, 0.4);
-padding: 20px 0;
+padding-top: 88px;
+    padding-bottom: 13px;
 transition: opacity 500ms , visibility 500ms;
 }
 
@@ -893,9 +894,11 @@ position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
+width: 408px;
+height: 584px;
 background: #fcfcfc;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
 }
 
@@ -935,12 +938,15 @@ fill: var(--color-inverted);
 /* Інформація */
 
 
-.your-contact {
-margin-bottom: 16px;
-}
 
 .box-contact {
+margin-bottom: 16px;
 text-align: center;
+font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.002em;
+    color: var(--color-primery);
+    margin-bottom: 16px;
 }
 
 
@@ -999,10 +1005,25 @@ display: block;
 color: #8E8F99;
 }
 
-.form-label-name{}
+.form-label-phone {
+font-size: 12px;
+line-height: 1.16;
+display: block;
+color: #8E8F99;
+}
 
-.form-label-phone{
+.form-label-email {
+font-size: 12px;
+line-height: 1.16;
+display: block;
+color: #8E8F99;
+}
 
+.form-label-coment {
+font-size: 12px;
+line-height: 1.16;
+display: block;
+color: #8E8F99;
 }
 
 .form-input {
@@ -1024,12 +1045,10 @@ border-radius: 4px;
 
 
 .privacy-policy {
+po
 display: flex;
-gap: 8px;
+align-items: center;
 margin-bottom: 24px;
-font: inherit;
-font-size: 12px;
-color: #757575;
 }
 
 
@@ -1055,6 +1074,7 @@ background-position: center;
 
 
 .type-polic{
+ position: relative;
 width: 100%;
 height: 16px;
 color: #8E8F99;
