--- a/css/styles.css
+++ b/css/styles.css
@@ -576,11 +576,10 @@ background-color: var(--color-social);
 
 /* Subscribe */
 
-
 .subtitle-box {
 display: flex;
 flex-direction: column;
-margin-left: 80px;
+margin-left: auto;
 }
 
 .subtitle-footer {
@@ -954,16 +953,14 @@ font-size: 16px;
 width: 360px;
 height: 40px;
 padding: 11px 0 11px 38px;
-margin-left: 0;
 border-radius: 4px;
 border: 1px solid rgba(33, 33, 33, 0.2);
-margin-top: 4px;
+transition: none;
 }
 
 .content:focus {
 outline: none;
 border: 1px solid var(--color-button);
-border-radius: 4px;
 }
 
 
@@ -1003,6 +1000,8 @@ font-size: 12px;
 line-height: 1.16;
 display: block;
 color: #8E8F99;
+margin-bottom: 4px;
+
 }
 
 .form-label-phone {
@@ -1010,6 +1009,7 @@ font-size: 12px;
 line-height: 1.16;
 display: block;
 color: #8E8F99;
+margin-top: 8px;
 }
 
 .form-label-email {
@@ -1017,6 +1017,7 @@ font-size: 12px;
 line-height: 1.16;
 display: block;
 color: #8E8F99;
+margin-top: 8px;
 }
 
 .form-label-coment {
@@ -1024,6 +1025,7 @@ font-size: 12px;
 line-height: 1.16;
 display: block;
 color: #8E8F99;
+margin-top: 8px;
 }
 
 .form-input {
@@ -1031,10 +1033,9 @@ width: 100%;
 height: 120px;
 resize: none;
 padding: 8px 0 0 16px;
-margin-bottom: 16px;
-margin-top: 4px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
+transition: none;
 }
 
 .form-input:focus {
@@ -1045,7 +1046,7 @@ border-radius: 4px;
 
 
 .privacy-policy {
-po
+margin-top: 8px;
 display: flex;
 align-items: center;
 margin-bottom: 24px;
@@ -1092,18 +1093,16 @@ line-height: 1.16;
 
 .input-form{
 position: relative;
-margin-bottom: 8px;
 }
 
 .icon-form {
 width: 18px;
-
 position: absolute;
 fill: #2E2F42;
 display: block;
 top: 50%;
 left: 19px;
-transform: translate(0, -40%);
+transform: translate(0, -50%);
 }
 
 
