--- a/css/styles.css
+++ b/css/styles.css
@@ -894,7 +894,6 @@ top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
 width: 408px;
-height: 584px;
 background: #fcfcfc;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -934,7 +933,7 @@ fill: var(--color-inverted);
 }
 
 
-/* Інформація */
+ /*Інформація */
 
 
 
@@ -942,10 +941,10 @@ fill: var(--color-inverted);
 margin-bottom: 16px;
 text-align: center;
 font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.002em;
-    color: var(--color-primery);
-    margin-bottom: 16px;
+line-height: 1.5;
+letter-spacing: 0.002em;
+color: var(--color-primery);
+margin-bottom: 16px;
 }
 
 
@@ -955,7 +954,7 @@ height: 40px;
 padding: 11px 0 11px 38px;
 border-radius: 4px;
 border: 1px solid rgba(33, 33, 33, 0.2);
-transition: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .content:focus {
@@ -987,6 +986,7 @@ line-height: 1.5;
 cursor: pointer;
 color: #FFFFFF;
 background-color: var(--color-button);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-form:hover,
@@ -998,10 +998,11 @@ background-color: var(--color-hover);
 .form-label-name {
 font-size: 12px;
 line-height: 1.16;
-display: block;
 color: #8E8F99;
-margin-bottom: 4px;
-
+}
+.span-contact {
+ margin: 0 0 4px;
+ display: block;
 }
 
 .form-label-phone {
@@ -1011,6 +1012,7 @@ display: block;
 color: #8E8F99;
 margin-top: 8px;
 }
+
 
 .form-label-email {
 font-size: 12px;
@@ -1035,7 +1037,7 @@ resize: none;
 padding: 8px 0 0 16px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
-transition: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -1056,7 +1058,7 @@ margin-bottom: 24px;
 .type-polic::before{
 display: block;
 content: '';
-border: 1px solid var(--color-primary);
+border: 1px solid rgba(46, 47, 66, 0.4);
 width: 16px;
 height: 16px;
 cursor: pointer;
@@ -1067,12 +1069,16 @@ margin-right: 8px;
 .visually-hidden-pol:checked + .type-polic::before {
 background-color: var(--color-button);
 background-image: url(../images/vector.svg);
-border: 1.25px solid #404bbf;
+border: 1.25px solid;
+border-color: #404bbf;
 background-repeat: no-repeat;
 background-size: 10px 8px;
 background-position: center;
 }
 
+.visually-hidden-pol:focus+.type-polic::before {
+    border-color: #404bbf;
+}
 
 .type-polic{
  position: relative;
@@ -1103,6 +1109,5 @@ display: block;
 top: 50%;
 left: 19px;
 transform: translate(0, -50%);
+transition: fill-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
