--- a/css/styles.css
+++ b/css/styles.css
@@ -863,7 +863,7 @@ margin-bottom: 0;
 /* modal  */
 
 .icon-close {
-fill: #2E2F42;
+fill: currentColor;
 }
 
 .backdrop {
@@ -929,7 +929,9 @@ color: var(--color-inverted);
 }
 
 .modal-close:hover .icon-close {
-fill: var(--color-inverted);
+{
+        fill: var(--color-inverted);
+    }
 }
 
 
@@ -949,9 +951,10 @@ margin-bottom: 16px;
 
 
 .content {
-width: 360px;
+width: 100%;
 height: 40px;
 padding: 11px 0 11px 38px;
+font-size: 12px;
 border-radius: 4px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1034,7 +1037,9 @@ margin-top: 8px;
 width: 100%;
 height: 120px;
 resize: none;
+font-size: 12px;
 padding: 8px 0 0 16px;
+color: #2E2F42;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1111,3 +1116,5 @@ left: 19px;
 transform: translate(0, -50%);
 transition: fill-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-close:hover
